fixed vertical alignment of menu items

--- a/css/base.css
+++ b/css/base.css
@@ -33,7 +33,6 @@ a {
 }
 
 #menu {
-    font-size:16px;
     background-color: rgba(38, 31, 40, 0.3);
     padding: 164px 12px 0px 12px;
     position: absolute;
@@ -43,9 +42,9 @@ a {
 
 #menu li{
     color: deepskyblue;
-    font-weight: bold;
+    font-size:16px; line-height:16px; font-weight: bold;
     text-align: center;
-    padding: 0 0 8px 0;
+    padding: 8px 0;
 }
 
 #menu li:hover{
